# Intelligent-Log-Analysis-Anomaly-Detection-Tool

./: CMakeLists.txt  README.md  compiling code.txt
include/analysis/: FrequencyAnalyzer.hpp  PatternAnalyzer.hpp  TimeWindowAnalyzer.hpp
include/anomaly/: BurstPatternDetector.hpp  IpFrequencyDetector.hpp  RuleBasedDetector.hpp  SpikeDetector.hpp  StatisticalDetector.hpp
include/core/: Anomaly.hpp  Core.hpp  LogEntry.hpp  Report.hpp
include/input/: FileReader.hpp  LogParser.hpp
include/report/: ConsoleReporter.hpp  CsvReporter.hpp  JsonReporter.hpp  ReportGenerator.hpp
include/utils/: ConfigLoader.hpp  Logger.hpp  StringUtils.hpp  TimeUtils.hpp  Utils.hpp
output/: benchmark_runs.csv  entries.csv  timeseries_per_minute.csv
output/graphs_20260214_134508/: index.html  plot_all_graphs.py
output/graphs_20260214_135438/: index.html
src/: main.cpp
src/analysis/: FrequencyAnalyzer.cpp  PatternAnalyzer.cpp  TimeWindowAnalyzer.cpp
src/anomaly/: BurstPatternDetector.cpp  IpFrequencyDetector.cpp  RuleBasedDetector.cpp  SpikeDetector.cpp  StatisticalDetector.cpp
src/input/: FileReader.cpp  LogParser.cpp
src/report/: ConsoleReporter.cpp  CsvReporter.cpp  JsonReporter.cpp  ReportGenerator.cpp
src/utils/: ConfigLoader.cpp  Logger.cpp  StringUtils.cpp  TimeUtils.cpp
